# stoat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  tests.yml
config/: default.toml
config/prompts/: intent_examples.json
docs/: configuration.md  examples.md  installation.md  releasing.md  roadmap.md  usage.md
scripts/: install_ollama.sh  setup_dev.sh
stoat/: __init__.py  __main__.py  cli.py  config.py  errors.py  observability.py
stoat/core/: context.py  intent_schema.py  nlp_engine.py  parser_backends.py  router.py
stoat/handlers/: __init__.py  app_management.py  base.py  file_operations.py  search.py  system_info.py
stoat/integrations/: desktop_env.py  file_system.py  search_engine.py  system_info.py  trash_manager.py
stoat/prompts/: system_prompt.py
stoat/safety/: __init__.py  confirmation.py  permissions.py  validator.py
stoat/utils/: undo_stack.py
tests/: conftest.py  test_app_management.py  test_cli.py  test_config.py  test_file_operations.py  test_nlp.py  test_nlp_engine.py  test_router.py  test_safety.py  test_search.py  test_system_info.py  test_undo_stack.py
tests/integration/: test_end_to_end.py
