[tool.poetry]
name = "stoat"
version = "0.1.0"
description = "Offline AI assistant for Linux - smart, quick, local"
authors = ["Yusuf Lawal <lawalyusufimp@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/stoat"
repository = "https://github.com/initysl/stoat"
keywords = ["ai", "assistant", "linux", "offline", "cli"]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12.0"}
rich = "^13.7.0"
pydantic = "^2.5.0"
httpx = "^0.27.0"
psutil = "^5.9.0"
rapidfuzz = "^3.6.0"
structlog = "^24.1.0"
python-dotenv = "^1.0.0"
toml = "^0.10.2"
llama-cpp-python = "^0.3.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
stoat = "stoat.cli:app"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
