[project]
name = "stoat"
version = "0.1.0"
description = "Offline AI assistant for Linux - smart, quick, local"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yusuf Lawal", email = "lawalyusufimp@gmail.com" }]
keywords = ["ai", "assistant", "linux", "offline", "cli"]
dependencies = [
  "click>=8.1,<9",
  "rich>=13.7,<14",
  "pydantic>=2.5,<3",
  "httpx>=0.27,<0.28",
  "psutil>=5.9,<6",
  "rapidfuzz>=3.6,<4",
  "structlog>=24.1,<25",
  "python-dotenv>=1.0,<2",
  "toml>=0.10.2,<0.11",
  "ollama>=0.6.1,<0.7",
]

[project.urls]
Homepage = "https://github.com/yourusername/stoat"
Repository = "https://github.com/initysl/stoat"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<0.24",
  "pytest-cov>=4.1,<5",
  "black>=24.1,<25",
  "ruff>=0.2,<0.3",
  "mypy>=1.8,<2",
]

[project.scripts]
stoat = "stoat.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stoat*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | \.pytest_cache
  | \.ruff_cache
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", ".pytest_cache", ".ruff_cache", "build", "dist"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
