[project]
name = "stoat-linux"
version = "0.1.0"
description = "Safe local Linux operations engine with natural-language CLI workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Yusuf Lawal", email = "lawalyusufimp@gmail.com" }]
keywords = ["assistant", "linux", "cli", "automation", "files"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1,<9",
  "rich>=13.7,<14",
  "pydantic>=2.5,<3",
  "toml>=0.10.2,<0.11",
]

[project.urls]
Homepage = "https://github.com/initysl/stoat"
Repository = "https://github.com/initysl/stoat"
Issues = "https://github.com/initysl/stoat/issues"

[project.optional-dependencies]
llm = [
  "ollama>=0.6.1,<0.7",
]
dev = [
  "build>=1.2,<2",
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<0.24",
  "pytest-cov>=4.1,<5",
  "black>=24.1,<25",
  "ruff>=0.2,<0.3",
  "mypy>=1.8,<2",
]

[project.scripts]
stoat = "stoat.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stoat*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | \.pytest_cache
  | \.ruff_cache
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", ".pytest_cache", ".ruff_cache", "build", "dist"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
